    * 3798 FIX: Clusters: Fixed invalid timestamp of last cached agent data...
    * 3836 FIX: Fixed perfometer in kentix multisensor rack...
    * 3848 FIX: megaraid_pdisks: Handle "rebuild" state as WARNING instead of UNKNOWN
    * 3849 FIX: check_cpu_peaks: Fixed broken active check
    * 3870 FIX: elphase.include: more robust against none type params

    Multisite:
    * 3187 notification view: new filter for log command via regex
    * 3228 The BI Treestate painter now exports the aggregation tree as real json structure
    * 3288 Implemented grouping of services in table views...
    * 3297 SEC: Fixes possible XSS in views sidebar snapin...
    * 2237 Unique name for columns of Host Groups and Service Groups...
    * 3310 New dashlet which shows user notifications
    * 3328 Default cloned views to be not public...
    * 3376 Cleaned up handling of setting Livestatus AuthUser for "see all" users...
            NOTE: Please refer to the migration notes!
    * 3397 Show IP addresses of a host when hovering over its name...
    * 3436 Views/Dashobards: Can now be published to members of contact groups...
    * 3127 new icon on services that are outside their check period
    * 3466 Logwatch pages now work in distributed environment without HTTH reverse proxy...
    * 3129 new view and datasource containing the results of the last periodic discovery check...
    * 3572 Added user login session idle timeout...
    * 3575 User logins can now be limited to single session at a time...
    * 3592 Views: Added sorter for host names (without site)
    * 3141 added user interfaces and permissions to view and acknowledge failed notifications
    * 3640 new filter option for status details: can now be negated
    * 3713 new filter: hosts with certain service problems
    * 3780 availability: now limit of fetched logfile rows is configurable.
    * 3864 tactical overview now shows the number of stale hosts and services