@@ -379,6 +379,7 @@
     * 3848 FIX: megaraid_pdisks: Handle "rebuild" state as WARNING instead of UNKNOWN
     * 3849 FIX: check_cpu_peaks: Fixed broken active check
     * 3870 FIX: elphase.include: more robust against none type params
+    * 3801 FIX: Fixed race condition with persisted data...
 
     Multisite:
     * 3187 notification view: new filter for log command via regex
